--- a/index.html
+++ b/index.html
@@ -9,7 +9,53 @@
 </head>
 
 <body>
+    <!-- HEADER AND NAV -->
+    <header id="header">
+        <h1>Vincent Nguyen</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#resume">Resume</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <!-- HERO -->
+    <section class="hero">
+    </section>
+
+    <!-- ABOUT ME -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
+    </section>
+
+    <!-- PROJECTS -->
+    <section id="projects">
+        <h2>Projects</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
+    </section>
+
+    <!-- CONTACT -->
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
+    </section>
+
+    <!-- RESUME -->
+    <section id="resume">
+        <h2>Resume</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+        <h2>Made with pride by Vincent Nguyen</h2>
+        <p>&copy; 2021</p>
+        <div><a href="#header">Back to top</a></div>
+    </footer>
 </body>
 
 </html>
