add projects filler content and contact info

--- a/index.html
+++ b/index.html
@@ -26,33 +26,61 @@
     <section class="hero">
     </section>
 
-    <!-- ABOUT ME -->
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
-    </section>
+    <main>
+        <!-- ABOUT ME -->
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
+        </section>
 
-    <!-- PROJECTS -->
-    <section id="projects">
-        <h2>Projects</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
-    </section>
+        <!-- PROJECTS -->
+        <section id="projects">
+            <h2>Projects</h2>
+            <div class="project">
+                <h3>Run Buddy</h3>
+                <img src="./assets/img/runbuddy.jpg" alt="">
+            </div>
+            <div class="project">
+                <h3>Plant Museum</h3>
+                <img src="./assets/img/museum.jpg" alt="">
+            </div>
+            <div class="project">
+                <h3>Festival Decoration</h3>
+                <img src="./assets/img/festival.jpg" alt="">
+            </div>
+            <div class="project">
+                <h3>Subway Design</h3>
+                <img src="./assets/img/subway.jpg" alt="">
+            </div>
+            <div class="project">
+                <h3>Tourism Planning</h3>
+                <img src="./assets/img/tourism.jpg" alt="">
+            </div>
+        </section>
 
-    <!-- CONTACT -->
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
-    </section>
+        <!-- CONTACT -->
+        <section id="contact">
+            <h2>Contact</h2>
+            <address>
+                <ul>
+                <li>1711-2600 Draper Ave, Ottawa, Ontario, Canada, K2H 9A9</li>
+                <li>613-979-6817</li>
+                <li><a href="mailto:vincent.ng39@gmail.com">Email</a></li>
+                </ul>
+            </address>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
+        </section>
 
-    <!-- RESUME -->
-    <section id="resume">
-        <h2>Resume</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
-    </section>
+        <!-- RESUME -->
+        <section id="resume">
+            <h2>Resume</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
+        </section>
+    </main>
 
     <!-- FOOTER -->
     <footer>
-        <h2>Made with pride by Vincent Nguyen</h2>
+        <h1>Made with pride by Vincent Nguyen</h1>
         <p>&copy; 2021</p>
         <div><a href="#header">Back to top</a></div>
     </footer>
