--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 <body>
     <!-- HEADER AND NAV -->
     <header id="header">
-        <h1>Vincent Nguyen</h1>
+        <h1>VINCENT NGUYEN</h1>
         <nav>
-            <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#resume">Resume</a></li>
-            </ul>
+            <a href="#about">ABOUT</a>
+            <a href="#projects">PROJECTS</a>
+            <a href="#contact">CONTACT</a>
+            <a href="#resume">RESUME</a>
         </nav>
     </header>
 
