remove Hero section. style About section

--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
         </nav>
     </header>
 
-    <!-- HERO -->
-    <section class="hero">
-    </section>
-
     <main>
         <!-- ABOUT ME -->
         <section id="about">
-            <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
+            <div class="about-img">
+                <img src="./assets/img/portrait.jpg" alt="">
+            </div>
+            <div class="about-text">
+                <h2>About Me</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
+            </div>
         </section>
 
         <!-- PROJECTS -->
