--- a/index.html
+++ b/index.html
@@ -1,88 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <title>Vincent Nguyen's Professional Portfolio</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Vincent Nguyen's Professional Portfolio</title>
-</head>
+    <body>
+        <!-- HEADER AND NAV -->
+        <header>
+            <h1>VINCENT NGUYEN</h1>
+            <nav>
+                <a href="#about">ABOUT</a>
+                <a href="#projects">PROJECTS</a>
+                <a href="#contact">CONTACT</a>
+                <a href="#resume">RESUME</a>
+            </nav>
+        </header>
 
-<body>
-    <!-- HEADER AND NAV -->
-    <header id="header">
-        <h1>VINCENT NGUYEN</h1>
-        <nav>
-            <a href="#about">ABOUT</a>
-            <a href="#projects">PROJECTS</a>
-            <a href="#contact">CONTACT</a>
-            <a href="#resume">RESUME</a>
-        </nav>
-    </header>
+        <main>
+            <!-- ABOUT ME -->
+            <section id="about">
+                <div class="about-img">
+                    <img src="./assets/img/portrait.jpg" alt="" />
+                </div>
+                <div class="about-text">
+                    <h2>About Me</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quam debitis ipsam dolor sunt rerum incidunt quia natus
+                        quibusdam similique quidem, velit eum illum iure
+                        voluptates odio, maxime quo nam placeat!
+                    </p>
+                </div>
+            </section>
 
-    <main>
-        <!-- ABOUT ME -->
-        <section id="about">
-            <div class="about-img">
-                <img src="./assets/img/portrait.jpg" alt="">
-            </div>
-            <div class="about-text">
-                <h2>About Me</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
-            </div>
-        </section>
+            <!-- PROJECTS -->
+            <section id="projects">
+                <h2>Projects</h2>
+                <div class="project">
+                    <h3>Run Buddy</h3>
+                    <img src="./assets/img/runbuddy.jpg" alt="" />
+                </div>
+                <div class="project">
+                    <h3>Plant Museum</h3>
+                    <img src="./assets/img/museum.jpg" alt="" />
+                </div>
+                <div class="project">
+                    <h3>Festival Decoration</h3>
+                    <img src="./assets/img/festival.jpg" alt="" />
+                </div>
+                <div class="project">
+                    <h3>Subway Design</h3>
+                    <img src="./assets/img/subway.jpg" alt="" />
+                </div>
+                <div class="project">
+                    <h3>Tourism Planning</h3>
+                    <img src="./assets/img/tourism.jpg" alt="" />
+                </div>
+            </section>
 
-        <!-- PROJECTS -->
-        <section id="projects">
-            <h2>Projects</h2>
-            <div class="project">
-                <h3>Run Buddy</h3>
-                <img src="./assets/img/runbuddy.jpg" alt="">
-            </div>
-            <div class="project">
-                <h3>Plant Museum</h3>
-                <img src="./assets/img/museum.jpg" alt="">
-            </div>
-            <div class="project">
-                <h3>Festival Decoration</h3>
-                <img src="./assets/img/festival.jpg" alt="">
-            </div>
-            <div class="project">
-                <h3>Subway Design</h3>
-                <img src="./assets/img/subway.jpg" alt="">
-            </div>
-            <div class="project">
-                <h3>Tourism Planning</h3>
-                <img src="./assets/img/tourism.jpg" alt="">
-            </div>
-        </section>
+            <!-- CONTACT -->
+            <section id="contact">
+                <h2>Contact</h2>
+                <address>
+                    <ul>
+                        <li>
+                            1711-2600 Draper Ave, Ottawa, Ontario, Canada, K2H
+                            9A9
+                        </li>
+                        <li>613-979-6817</li>
+                        <li>
+                            <a href="mailto:vincent.ng39@gmail.com">Email</a>
+                        </li>
+                    </ul>
+                </address>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quam debitis ipsam dolor sunt rerum incidunt quia natus
+                    quibusdam similique quidem, velit eum illum iure voluptates
+                    odio, maxime quo nam placeat!
+                </p>
+            </section>
 
-        <!-- CONTACT -->
-        <section id="contact">
-            <h2>Contact</h2>
-            <address>
-                <ul>
-                <li>1711-2600 Draper Ave, Ottawa, Ontario, Canada, K2H 9A9</li>
-                <li>613-979-6817</li>
-                <li><a href="mailto:vincent.ng39@gmail.com">Email</a></li>
-                </ul>
-            </address>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
-        </section>
+            <!-- RESUME -->
+            <section id="resume">
+                <h2>Resume</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quam debitis ipsam dolor sunt rerum incidunt quia natus
+                    quibusdam similique quidem, velit eum illum iure voluptates
+                    odio, maxime quo nam placeat!
+                </p>
+            </section>
+        </main>
 
-        <!-- RESUME -->
-        <section id="resume">
-            <h2>Resume</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis ipsam dolor sunt rerum incidunt quia natus quibusdam similique quidem, velit eum illum iure voluptates odio, maxime quo nam placeat!</p>
-        </section>
-    </main>
-
-    <!-- FOOTER -->
-    <footer>
-        <h1>Made with pride by Vincent Nguyen</h1>
-        <p>&copy; 2021</p>
-        <div><a href="#header">Back to top</a></div>
-    </footer>
-</body>
-
+        <!-- FOOTER -->
+        <footer>
+            <h1>Made with pride by Vincent Nguyen</h1>
+            <p>&copy; 2021</p>
+            <div><a href="#">Back to top</a></div>
+        </footer>
+    </body>
 </html>
