--- a/index.html
+++ b/index.html
@@ -64,24 +64,42 @@
             <!-- CONTACT -->
             <section id="contact">
                 <h2>Contact</h2>
-                <address>
-                    <ul>
-                        <li>
-                            1711-2600 Draper Ave, Ottawa, Ontario, Canada, K2H
-                            9A9
-                        </li>
-                        <li>613-979-6817</li>
-                        <li>
-                            <a href="mailto:vincent.ng39@gmail.com">Email</a>
-                        </li>
-                    </ul>
-                </address>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Quam debitis ipsam dolor sunt rerum incidunt quia natus
                     quibusdam similique quidem, velit eum illum iure voluptates
                     odio, maxime quo nam placeat!
                 </p>
+                <div class="contact-flex">
+                    <form>
+                        <label for="contact-name">Your Name</label>
+                        <input
+                            type="text"
+                            id="contact-name"
+                            placeholder="Your name here"
+                        />
+                        <label for="contact-message">Message</label>
+                        <textarea
+                            id="contact-message"
+                            placeholder="Your message here"
+                        ></textarea>
+                        <button type="button">Send message</button>
+                    </form>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2804.293120418672!2d-75.79175788416752!3d45.34289494955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce00cb615f65f7%3A0xb5c3753c8ff8ed30!2s1711-2600%20Draper%20Ave%2C%20Ottawa%2C%20ON%20K2H%209A9%2C%20Canada!5e0!3m2!1sen!2sus!4v1635216148235!5m2!1sen!2sus"
+                        style="border: 0"
+                        allowfullscreen=""
+                    ></iframe>
+                    <address>
+                        1711-2600 Draper Ave <br />
+                        Ottawa, Ontario, Canada <br />
+                        K2H 9A9 <br />
+                        613-979-6817 <br />
+                        <a href="mailto:vincent.ng39@gmail.com"
+                            >vincent.ng39@gmail.com</a
+                        >
+                    </address>
+                </div>
             </section>
 
             <!-- RESUME -->
