--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
 
         <!-- FOOTER -->
         <footer>
-            <h1>Made with pride by Vincent Nguyen</h1>
+            <h1>
+                Made with pride by <span class="signature">Vincent Nguyen</span>
+            </h1>
             <p>&copy; 2021</p>
             <div><a href="#">Back to top</a></div>
         </footer>
