added alt attributes, changed <div> elements in projects section into <a> elements

--- a/index.html
+++ b/index.html
@@ -39,26 +39,41 @@
             <!-- PROJECTS -->
             <section id="projects">
                 <h2>Projects</h2>
-                <div class="project">
+                <a class="project" href="https://kelerik.github.io/run-buddy/">
                     <h3>Run Buddy</h3>
-                    <img src="./assets/img/runbuddy.jpg" alt="" />
-                </div>
-                <div class="project">
+                    <img
+                        src="./assets/img/runbuddy.jpg"
+                        alt="A runner tying their shoes and getting ready to go for a jog."
+                    />
+                </a>
+                <a class="project">
                     <h3>Plant Museum</h3>
-                    <img src="./assets/img/museum.jpg" alt="" />
-                </div>
-                <div class="project">
+                    <img
+                        src="./assets/img/museum.jpg"
+                        alt="The main lobby of a multi-floor museum featuring many lights, overpasses, and massive planters on the walls."
+                    />
+                </a>
+                <a class="project">
                     <h3>Festival Decoration</h3>
-                    <img src="./assets/img/festival.jpg" alt="" />
-                </div>
-                <div class="project">
+                    <img
+                        src="./assets/img/festival.jpg"
+                        alt="A cemetary at dusk with many tall trees and bright candles at the gravestones."
+                    />
+                </a>
+                <a class="project">
                     <h3>Subway Design</h3>
-                    <img src="./assets/img/subway.jpg" alt="" />
-                </div>
-                <div class="project">
+                    <img
+                        src="./assets/img/subway.jpg"
+                        alt="The main deck inside a large subway station, with the viewer facing two escalators heading upwards."
+                    />
+                </a>
+                <a class="project">
                     <h3>Tourism Planning</h3>
-                    <img src="./assets/img/tourism.jpg" alt="" />
-                </div>
+                    <img
+                        src="./assets/img/tourism.jpg"
+                        alt="A lakeside town at dawn with great mountains in the background."
+                    />
+                </a>
             </section>
 
             <!-- CONTACT -->
