filler projects link to placeholder webpage

--- a/index.html
+++ b/index.html
@@ -46,28 +46,28 @@
                         alt="A runner tying their shoes and getting ready to go for a jog."
                     />
                 </a>
-                <a class="project">
+                <a class="project" href="./placeholder.html">
                     <h3>Plant Museum</h3>
                     <img
                         src="./assets/img/museum.jpg"
                         alt="The main lobby of a multi-floor museum featuring many lights, overpasses, and massive planters on the walls."
                     />
                 </a>
-                <a class="project">
+                <a class="project" href="./placeholder.html">
                     <h3>Festival Decoration</h3>
                     <img
                         src="./assets/img/festival.jpg"
                         alt="A cemetary at dusk with many tall trees and bright candles at the gravestones."
                     />
                 </a>
-                <a class="project">
+                <a class="project" href="./placeholder.html">
                     <h3>Subway Design</h3>
                     <img
                         src="./assets/img/subway.jpg"
                         alt="The main deck inside a large subway station, with the viewer facing two escalators heading upwards."
                     />
                 </a>
-                <a class="project">
+                <a class="project" href="./placeholder.html">
                     <h3>Tourism Planning</h3>
                     <img
                         src="./assets/img/tourism.jpg"
