--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <body>
         <!-- HEADER AND NAV -->
         <header>
+            <!-- elements stack vertically at smaller screens -->
+            <!-- left -->
             <h1>VINCENT NGUYEN</h1>
+            <!-- right -->
             <nav>
                 <a href="#about">ABOUT</a>
                 <a href="#projects">PROJECTS</a>
@@ -22,9 +25,12 @@
         <main>
             <!-- ABOUT ME -->
             <section id="about">
+                <!-- elements stack vertically at smaller screens -->
+                <!-- left -->
                 <div class="about-img">
                     <img src="./assets/img/portrait.jpg" alt="" />
                 </div>
+                <!-- right -->
                 <div class="about-text">
                     <h2>About Me</h2>
                     <p>
@@ -38,7 +44,10 @@
 
             <!-- PROJECTS -->
             <section id="projects">
+                <!-- full width -->
                 <h2>Projects</h2>
+                <!-- elements stack vertically at smaller screens -->
+                <!-- first, primary project -->
                 <a class="project" href="https://kelerik.github.io/run-buddy/">
                     <h3>Run Buddy</h3>
                     <img
@@ -46,6 +55,7 @@
                         alt="A runner tying their shoes and getting ready to go for a jog."
                     />
                 </a>
+                <!-- remaining projects, flexing -->
                 <a class="project" href="./placeholder.html">
                     <h3>Plant Museum</h3>
                     <img
@@ -78,6 +88,7 @@
 
             <!-- CONTACT -->
             <section id="contact">
+                <!-- full width -->
                 <h2>Contact</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -85,7 +96,10 @@
                     quibusdam similique quidem, velit eum illum iure voluptates
                     odio, maxime quo nam placeat!
                 </p>
+                <!-- another contaier created to create two columns max -->
                 <div class="contact-flex">
+                    <!-- elements stack vertically at smaller screens -->
+                    <!-- left -->
                     <form>
                         <label for="contact-name">Your Name</label>
                         <input
@@ -100,11 +114,13 @@
                         ></textarea>
                         <button type="button">Send message</button>
                     </form>
+                    <!-- right -->
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2804.293120418672!2d-75.79175788416752!3d45.34289494955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce00cb615f65f7%3A0xb5c3753c8ff8ed30!2s1711-2600%20Draper%20Ave%2C%20Ottawa%2C%20ON%20K2H%209A9%2C%20Canada!5e0!3m2!1sen!2sus!4v1635216148235!5m2!1sen!2sus"
                         style="border: 0"
                         allowfullscreen=""
                     ></iframe>
+                    <!-- "floats" in bottom of left column. later joins the stack at smaller screens -->
                     <address>
                         1711-2600 Draper Ave <br />
                         Ottawa, Ontario, Canada <br />
@@ -119,6 +135,7 @@
 
             <!-- RESUME -->
             <section id="resume">
+                <!-- full width -->
                 <h2>Resume</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -131,9 +148,11 @@
 
         <!-- FOOTER -->
         <footer>
+            <!-- name is "highlighted" inline. moves to next line at smaller screens -->
             <h1>
                 Made with pride by <span class="signature">Vincent Nguyen</span>
             </h1>
+            <!-- right. centered at smaller screens -->
             <p>&copy; 2021</p>
             <div><a href="#">Back to top</a></div>
         </footer>
