--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
             <div class="about-text">
                <h2>About Me</h2>
                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-                  debitis ipsam dolor sunt rerum incidunt quia natus quibusdam
-                  similique quidem, velit eum illum iure voluptates odio, maxime
-                  quo nam placeat!
+                  Hey, I'm Vincent, and I love tech! Programming has been a big
+                  hobby of mine since my teenage years, and I hope to put my
+                  talents to good use. I have confidence in the entirety of
+                  full-stack development, whether that be the front-end user
+                  experience, or the back-end server optimization. Below, you
+                  will find my various projects, including my schoolwork and
+                  even some of my hobby work.
                </p>
             </div>
          </section>
@@ -59,7 +62,7 @@
                />
             </a>
             <!-- remaining projects, flexing -->
-            <a class="project" href="https://kelerik.github.io/run-buddy/">
+            <a class="project" href="https://ng-vincent.github.io/run-buddy/">
                <h3>Run Buddy</h3>
                <img
                   src="./assets/img/runbuddy.jpg"
@@ -100,12 +103,7 @@
          <section id="contact">
             <!-- full width -->
             <h2>Contact</h2>
-            <p>
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-               debitis ipsam dolor sunt rerum incidunt quia natus quibusdam
-               similique quidem, velit eum illum iure voluptates odio, maxime
-               quo nam placeat!
-            </p>
+            <p>Want to get in touch? Feel free to contact me at any time.</p>
             <!-- another contaier created to create two columns max -->
             <div class="contact-flex">
                <!-- elements stack vertically at smaller screens -->
@@ -126,20 +124,21 @@
                </form>
                <!-- right -->
                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2804.293120418672!2d-75.79175788416752!3d45.34289494955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce00cb615f65f7%3A0xb5c3753c8ff8ed30!2s1711-2600%20Draper%20Ave%2C%20Ottawa%2C%20ON%20K2H%209A9%2C%20Canada!5e0!3m2!1sen!2sus!4v1635216148235!5m2!1sen!2sus"
-                  style="border: 0"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.254852090073!2d-75.69597854162012!3d45.419225677456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce05ab058849ef%3A0xac2470425d832c05!2s70%20Gloucester%20St%2C%20Ottawa%2C%20ON%20K1P%205Z9%2C%20Canada!5e0!3m2!1sen!2sus!4v1642634653833!5m2!1sen!2sus"
                   allowfullscreen=""
+                  loading="lazy"
                ></iframe>
                <!-- "floats" in bottom of left column. later joins the stack at smaller screens -->
-               <address>
-                  1711-2600 Draper Ave <br />
-                  Ottawa, Ontario, Canada <br />
-                  K2H 9A9 <br />
-                  613-979-6817 <br />
-                  <a href="mailto:vincent.ng39@gmail.com"
-                     >vincent.ng39@gmail.com</a
-                  >
-               </address>
+               <div class="contact-info">
+                  <address>
+                     Ottawa, Ontario, Canada <br />
+                     <a href="tel:613-979-6817">613-979-6817</a> <br />
+                     <a href="mailto:vincent.ng39@gmail.com"
+                        >vincent.ng39@gmail.com</a
+                     >
+                  </address>
+                  <br />
+               </div>
             </div>
          </section>
 
@@ -147,12 +146,30 @@
          <section id="resume">
             <!-- full width -->
             <h2>Resume</h2>
-            <p>
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-               debitis ipsam dolor sunt rerum incidunt quia natus quibusdam
-               similique quidem, velit eum illum iure voluptates odio, maxime
-               quo nam placeat!
-            </p>
+            <ul class="resume-links">
+               <li>
+                  Resume:
+                  <a
+                     href="https://docs.google.com/document/d/1ubR7CUYmHJOP201eHmUz-Z2ulG1UnlMrlIcd3JcMlXE/edit?usp=sharing"
+                     target="_blank"
+                     >Google Docs</a
+                  >
+               </li>
+               <li>
+                  Github Profile:
+                  <a href="https://github.com/NG-Vincent" target="_blank"
+                     >NG-Vincent</a
+                  >
+               </li>
+               <li>
+                  LinkedIn Profile:
+                  <a
+                     href="https://www.linkedin.com/in/vincent-nguyen-4994bb221/"
+                     target="_blank"
+                     >LinkedIn</a
+                  >
+               </li>
+            </ul>
          </section>
       </main>
 
