--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
             <h2>Projects</h2>
             <!-- elements stack vertically at smaller screens -->
             <!-- first, primary project -->
+            <a class="project" href="https://safe-cove-20593.herokuapp.com/">
+               <h3>Job Tracker</h3>
+               <img
+                  src="./assets/img/jobtracker.jpg"
+                  alt="Webpage of a song and lyric search engine."
+               />
+            </a>
+            <!-- remaining projects, flexing -->
             <a
                class="project"
                href="https://github.com/chamibia/lyrics-finder/"
@@ -61,7 +69,6 @@
                   alt="Webpage of a song and lyric search engine."
                />
             </a>
-            <!-- remaining projects, flexing -->
             <a class="project" href="https://ng-vincent.github.io/run-buddy/">
                <h3>Run Buddy</h3>
                <img
